; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_compare_const_set.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_compare_const_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx_const_param_eval_output = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_const_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_const_set(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.d3dx_const_param_eval_output*, align 8
  %7 = alloca %struct.d3dx_const_param_eval_output*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.d3dx_const_param_eval_output*
  store %struct.d3dx_const_param_eval_output* %9, %struct.d3dx_const_param_eval_output** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.d3dx_const_param_eval_output*
  store %struct.d3dx_const_param_eval_output* %11, %struct.d3dx_const_param_eval_output** %7, align 8
  %12 = load %struct.d3dx_const_param_eval_output*, %struct.d3dx_const_param_eval_output** %6, align 8
  %13 = getelementptr inbounds %struct.d3dx_const_param_eval_output, %struct.d3dx_const_param_eval_output* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.d3dx_const_param_eval_output*, %struct.d3dx_const_param_eval_output** %7, align 8
  %16 = getelementptr inbounds %struct.d3dx_const_param_eval_output, %struct.d3dx_const_param_eval_output* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %14, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %2
  %20 = load %struct.d3dx_const_param_eval_output*, %struct.d3dx_const_param_eval_output** %6, align 8
  %21 = getelementptr inbounds %struct.d3dx_const_param_eval_output, %struct.d3dx_const_param_eval_output* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load %struct.d3dx_const_param_eval_output*, %struct.d3dx_const_param_eval_output** %7, align 8
  %24 = getelementptr inbounds %struct.d3dx_const_param_eval_output, %struct.d3dx_const_param_eval_output* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = sub nsw i64 %22, %25
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %3, align 4
  br label %36

28:                                               ; preds = %2
  %29 = load %struct.d3dx_const_param_eval_output*, %struct.d3dx_const_param_eval_output** %6, align 8
  %30 = getelementptr inbounds %struct.d3dx_const_param_eval_output, %struct.d3dx_const_param_eval_output* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.d3dx_const_param_eval_output*, %struct.d3dx_const_param_eval_output** %7, align 8
  %33 = getelementptr inbounds %struct.d3dx_const_param_eval_output, %struct.d3dx_const_param_eval_output* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = sub nsw i32 %31, %34
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %28, %19
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
